[package]
name = "tree-sitter-csv"
description = "csv grammar for the tree-sitter parsing library"
version = "0.2.0"
keywords = ["incremental", "parsing", "csv"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-csv"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.22.2"

[build-dependencies]
cc = "1.0"
